--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "graphql-server-express": "^1.3.2",
     "graphql-tag": "^2.8.0",
     "graphql-tools": "^2.21.0",
+    "lodash": "^4.17.5",
     "meteor-node-stubs": "^0.3.2",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0"
+  },
+  "devDependencies": {
+    "babel-plugin-inline-import": "^2.0.6"
   }
 }
