--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "graphql-tag": "^2.8.0",
     "graphql-tools": "^2.21.0",
     "lodash": "^4.17.5",
+    "merge-graphql-schemas": "^1.5.0",
     "meteor-node-stubs": "^0.3.2",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
